--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </div>
 
                         <!-- Main Headline -->
-                        <h1 class="hero-headline">Discover the Pearl of the Indian Ocean</h1>
+                        <h1 class="hero-headline">Discover the Pearl of the Indian Ocean.</h1>
 
                         <!-- Subheadline -->
                         <!-- <p class="hero-subheadline">Experience the magic of Sri Lanka with expert local guidance</p> -->
